--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "music-metadata": "^8.1.4",
+    "ws": "^8.16.0"
   },
   "engines": {
     "node": ">=18.0.0"
